[package]
name = "spotr-agent"
version = "0.1.0"
authors = ["dbregeon <denis.bregeon@digitalbrikes.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
spotr-sensing = { path = "../spotr-sensing", version = "0.1.0" }
libloading = "0.7.3"
log = "0.4.11"
env_logger = "0.9.1"
toml = "0.5.7"
serde = "1.0.116"
serde_derive = "1.0.116"
simple-error = "0.2.2"
tokio = { version = "1.21", features = ["rt-multi-thread"]}
warp = "0.3"
prometheus = "0.13"
futures = "0.3"

[target.x86_64-unknown-linux-gnu]
linker = "/usr/bin/clang"
rustflags = ["-Clink-arg=-fuse-ld=lld", "-Clink-arg=-Wl,--no-rosegment"]